<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="172dp"
        android:layout_height="170dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_image" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="338dp"
        android:layout_height="54dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="81dp"
        android:backgroundTint="@color/black"
        android:hint="@string/login_username_hint"
        android:importantForAutofill="no"
        android:inputType="textWebEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.694"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/login_password"
        android:layout_width="325dp"
        android:layout_height="60dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="74dp"
        android:autofillHints="password"
        android:backgroundTint="@color/black"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.806"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="91dp"
        android:layout_height="55dp"
        android:layout_marginTop="453dp"
        android:layout_marginEnd="284dp"
        android:layout_marginBottom="224dp"
        android:text="@string/loginBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkBox"
        style="@style/text_field_style3"
        android:layout_width="162dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="372dp"
        android:text="@string/chkbox_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/text_field_style3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="460dp"
        android:text="@string/tv_label"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="131dp"
        android:layout_height="50dp"
        android:layout_marginTop="540dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="@color/brown"
        android:textColor="@color/white"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="140dp"
        android:layout_height="33dp"
        android:layout_marginTop="548dp"
        android:layout_marginEnd="252dp"
        android:text="@string/no_account"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="206dp"
        android:layout_height="52dp"
        android:layout_marginStart="188dp"
        android:layout_marginTop="440dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/google_image1"
        android:contentDescription="@string/welcome_to_the_login_screen" />

</androidx.constraintlayout.widget.ConstraintLayout>