<!--

Safwan Shaib                    n01343815    0NA
Nkeiru Johnson-Achilike         n01411707    0NA
-->

<resources>
    <string name="app_name">Smart Home Controller</string>
    <string name="menu_title1">Temperature</string>
    <string name="menu_title2">Motion</string>
    <string name="menu_title3">Smoke</string>
    <string name="menu_title4">RFID</string>
    <string name="alert_title">Exiting the app!</string>
    <string name="alert_msg">Click Yes to confirm or No to cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="website_link">https://www.hackster.io/</string>
    <string name="help_tv">This help screen is to be implemented</string>
    <string name="help">Help and Support</string>
    <string name="call">Call</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="review">Customer Review</string>
    <string name="about_tv">This screen shows general info about the app yet to be implemented</string>
    <string name="snackbar_allow">Phone call permission allowed</string>
    <string name="snackbar_deny">Phone call permission Denied</string>
    <string name="phone_number">tel:912</string>
    <string name="sharedpref_filename">HomeCTRL_file</string>
    <string name="motionscreen">Motion Screen</string>
    <string name="smokescreen">Smoke Screen</string>
    <string name="rfidscreen">RFID Screen</string>
    <string name="loginScreen">login screen</string>
    <string name="temperaturescreen">Temperature Screen</string>
    <string name="permissionaceppt">permission accepted</string>
    <string name="permissionisgiven">permission was given by the user</string>
    <string name="title">title</string>
    <string name="notification">notification</string>
    <string name="app_settings_tv">Select the screen you\'d like to configure</string>
    <string name="login_username_hint">username</string>
    <string name="login_password_hint">password</string>
    <string name="loginBtn">Login</string>
    <string name="chkbox_label">Remember Me</string>
    <string name="tv_label">OR</string>
    <string name="pref_label">UserPref</string>
    <string name="u_name">Username</string>
    <string name="pass">Password</string>
    <string name="check">checked</string>
    <string name="blank1" />
    <string name="blank2" />
    <string-array name="configlist">
        <item>App Settings</item>
        <item>System Settings</item>
        <item>User Information</item>
        <item>About Device</item>
    </string-array>
    <string name="send_love">Send Love</string>
    <string name="submit_review">Submit</string>
    <string name="comment_review">Your comment</string>
    <string name="email_review">Email</string>
    <string name="phone_review">Phone Number</string>
    <string name="name_review">Your Name</string>
    <string name="model_review">Your device\'s model:</string>
    <string name="user_saved">user has been saved</string>
    <string name="save_failed">\"Fail to add data \"</string>
    <string name="check_numeric">.*\\d.*</string>
    <string name="ET_Validation1">User name field Can\'t be blank</string>
    <string name="ET_Validation2">User name should have minimum 3 charecters</string>
    <string name="ET_validation3">User name should not contain any numeric charecter</string>
    <string name="pass_validation1">Password field can not be blank</string>
    <string name="pass_validation2">Password should contain at least 8 digits</string>
    <string name="Welcome_msg">Welcome To Smart Home Controller</string>
    <string name="sign_out">Sign Out</string>
    <string name="discontinue">Don\'t Want To Continue!!!</string>
    <string name="blnk5" />
    <string name="blnk1" />
    <string name="blnk" />
    <string name="btn3_label">Configure Now</string>
    <string-array name="item_contacts">
        <item>Safwan Shaib </item>
        <item>Abdalrahman Ragab</item>
        <item>Nkeiru Johnson-Achilike</item>
        <item>Tanushree Ray</item>
    </string-array>
    <string name="radio_button1">Dark</string>
    <string name="radio_button2">Light</string>
    <string name="home_screen_background">Home Screen Background</string>
    <string name="radio_value1">Celsius</string>
    <string name="radio_value2">Fahrenheit</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="lock_screen_to_portrait">Lock Screen To Portrait</string>
    <string name="home_screen_clock_format">Home Screen Clock Format</string>
    <string name="_24hrs">24Hrs</string>
    <string name="_12hrs">12Hrs</string>
    <string name="configure">Apply</string>
    <string name="btn2">Emergency Call</string>
    <string name="turn_on">Turn On</string>
    <string name="turn_off">Turn Off</string>
    <string name="home">Home</string>
    <string name="notification_txt">Notification</string>
    <string name="email_id"> safwan@humber.ca</string>
    <string name="spc1">\n</string>
    <string name="contact_label">\Contact Number : \</string>
    <string name="ph_number"> 416_473_9600</string>
    <string name="email_label">\Email : \</string>
    <string name="email_label1">\Email : \</string>
    <string name="email_id1"> abdalrahman@humber.ca</string>
    <string name="spc2">\n</string>
    <string name="contact_label1">\Contact Number : \</string>
    <string name="ph_number1"> 647_963_2514</string>
    <string name="email_label2">\Email : \</string>
    <string name="email_id2"> nkeiru@humber.ca</string>
    <string name="spc3">\n</string>
    <string name="contact_label2">\Contact Number : \</string>
    <string name="ph_number2"> 519_960_2856</string>
    <string name="email_label3">\Email : \</string>
    <string name="email_id3"> tanushree@humber.ca</string>
    <string name="spc4">\n</string>
    <string name="contact_label3">\Contact Number : \</string>
    <string name="ph_number3"> 519_574_2815</string>
    <string name="general_label1">\Any Questions ? \</string>
    <string name="spc5">\n</string>
    <string name="general_label2">\Happy To Help!!! \</string>
    <string name="msg1">\Thank You \</string>
    <string name="space1">\  \</string>
    <string name="space2">\  \</string>
    <string name="msg2">\For Sign Up\</string>
    <string name="str1">Landing On Settings Screen</string>
    <string name="register">Register</string>
    <string name="smokelevel">Current Smoke Level:</string>
    <string name="normallevel">"Normal Smoke Level: 0_30 "</string>
    <string name="submitting">Submitting...</string>
    <string name="error_submitting_review">Error submitting review</string>
    <string name="user_exists">User Exists</string>
    <string name="db_error">Database error</string>
    <string name="open_door">Open Door</string>
    <string name="activity_log">Activity Log</string>
    <string name="open_door_tv">Open Door</string>
    <string name="no_account">No account?</string>
    <string name="profile_picture">Profile picture</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="logout">Logout</string>
    <string name="smokesensed">smoke is sensed!</string>
    <string name="space">" "</string>
    <string name="create_new_account">Create New Account</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="registration">Registration</string>
    <string name="reg_name_error">Name field Can\'t be empty</string>
    <string name="reg_phone_error">Phone field can\'t be empty</string>
    <string name="reg_email_error">Email field can\'t be empty</string>
    <string name="reg_email_error1">Please enter a valid email address</string>
    <string name="reg_phone_error1">Phone field can\'t be empty</string>
    <string name="password_should_have">\"Password should have : \"</string>
    <string name="at_least_one_digit">\"At least one digit \"</string>
    <string name="one_upper_case">\"At least one upper case letter \"</string>
    <string name="one_special_char">\"At least one special charecter \"</string>
    <string name="reg_conf_pswd_error">Confirm password can\'t be empty!</string>
    <string name="reg_conf_pswd_error1">Confirm password should match with the password field!!</string>
    <string name="registration_screen_description">Welcome to the registration screen</string>
    <string name="review_screen_description">Welcome to the review screen</string>
    <string name="pref_time">Time selection can not be empty</string>
    <string name="pref_color">Color selection can not be empty</string>
    <string name="pref">Please select your preferences</string>
    <string name="welcome_to_the_login_screen">welcome to the login screen</string>
    <string name="read_firebase">Display records</string>
    <string name="submitted_successfully">Submitted Successfully</string>
    <string name="real_time_rfid">RT Last Record:</string>
    <string name="tempTxt">Temperature is:&#160;</string>
    <string name="humidTxt">Humidity is:&#160;</string>

</resources>