<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:gravity="center"
    tools:context=".RegistrationActivity">

    <Button
        android:id="@+id/sign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="616dp"
        android:layout_marginEnd="9dp"
        android:text="@string/create_new_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        style="@style/registration"
        android:layout_width="388dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="248dp"
        android:autofillHints="name"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        style="@style/registration"
        android:layout_width="392dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="320dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/password"
        style="@style/registration"
        android:layout_width="389dp"
        android:layout_height="59dp"
        android:layout_marginTop="392dp"
        android:layout_marginEnd="4dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/password2"
        style="@style/registration"
        android:layout_width="391dp"
        android:layout_height="66dp"
        android:layout_marginTop="464dp"
        android:layout_marginEnd="4dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="password" />

    <EditText
        android:id="@+id/phone"
        style="@style/registration"
        android:layout_width="391dp"
        android:layout_height="56dp"
        android:layout_marginTop="544dp"
        android:layout_marginEnd="4dp"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="phone" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="289dp"
        android:layout_height="41dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="278dp"
        android:layout_height="170dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/smart_home_reg"
        android:contentDescription="@string/registration_screen_description" />


</androidx.constraintlayout.widget.ConstraintLayout>